--- a/assets/scss/_aboutMe.scss
+++ b/assets/scss/_aboutMe.scss
@@ -1,14 +1,14 @@
-.portfolio{
+.aboutMe{
     height: 100vh;
     align-items: center;
     padding-top: 4rem;
     background-color: black;
     border-top: 2px solid red;
-    
+
     .container{
         .sectionTitle{
             text-align: center;
-            margin-bottom: 9rem;
+            margin-bottom: 2rem;
             span{
                 color: grey;
                 font-size: 11px;
@@ -23,16 +23,21 @@
                 font-family: 'Bebas Neue', cursive;
             }
         }
-        .row{
-            justify-content: space-around;
-            #forCard{
-                border: 1px solid red;
-                width: 20rem;
-                height: 15rem;
-                border-radius: 10px;
-                transition: 1s;
+    }
+
+    .row{
+        #forPhoto{
+            img{
+                max-width: 75%;
+                border: 2px solid red;
+            }
+        }
+        #forAbout{
+            p{
+                color: white;
+                letter-spacing: 2px;
+                font-family: 'Bebas Neue', cursive;
             }
         }
     }
-
 }
