--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,8 +4,10 @@
     box-sizing: border-box;
 }
 *::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
+    display: none;
   }
 
 @import 'forHero';
-@import 'forPortfolio';
+@import 'myWork';
+@import 'aboutMe';
+@import 'footer';
